keyrx_daemon/build_log.txt
   Compiling keyrx_daemon v0.1.0 (C:\Users\ryosu\repos\keyrx\keyrx_daemon)
error[E0425]: cannot find function `process_event` in this scope
   --> keyrx_daemon\src\daemon\mod.rs:827:37
    |
827 |                 let output_events = process_event(event, lookup, state);
    |                                     ^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this function
    |
 40 + use keyrx_core::runtime::process_event;
    |

warning: unused import: `std::fs`
   --> keyrx_daemon\src\test_utils\output_capture.rs:27:5
    |
 27 | use std::fs;
    |     ^^^^^^^
    |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
   --> keyrx_daemon\src\test_utils\mod.rs:127:1
    |
127 | pub mod output_capture;
    | ^^^^^^^^^^^^^^^^^^^^^^^
    = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `PathBuf` and `Path`
   --> keyrx_daemon\src\test_utils\output_capture.rs:30:17
    |
 30 | use std::path::{Path, PathBuf};
    |                 ^^^^  ^^^^^^^
    |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
   --> keyrx_daemon\src\test_utils\mod.rs:127:1
    |
127 | pub mod output_capture;
    | ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Instant`
   --> keyrx_daemon\src\test_utils\output_capture.rs:31:27
    |
 31 | use std::time::{Duration, Instant};
    |                           ^^^^^^^
    |
help: if this is a test module, consider adding a `#[cfg(test)]` to the containing module
   --> keyrx_daemon\src\test_utils\mod.rs:127:1
    |
127 | pub mod output_capture;
    | ^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `timeout`
   --> keyrx_daemon\src\test_utils\output_capture.rs:161:37
    |
161 |     pub fn find_by_name(name: &str, timeout: Duration) -> Result<Self, VirtualDeviceError> {
    |                                     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_timeout`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0425`.
warning: `keyrx_daemon` (lib) generated 4 warnings
error: could not compile `keyrx_daemon` (lib) due to 1 previous error; 4 warnings emitted
